Fix: Update API routes to use environment variables for URLs instead of hardcoded localhost

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "framework": "nextjs",
   "outputDirectory": ".next",
   "functions": {
-    "api/**/*.js": {
+    "src/app/api/**/*.js": {
       "maxDuration": 60
     }
   }
