--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.750.0",
     "@google/generative-ai": "^0.22.0",
-    "frames.js": "^0.21.3",
+    "frames.js": "^0.19.0",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/preset-env": "^7.26.9",
     "@types/node": "22.13.4",
     "@types/react": "18.2.0",
+    "babel-loader": "^10.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.7.3"
