--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.750.0",
+    "@farcaster/miniapp-sdk": "^0.2.1",
     "@google/generative-ai": "^0.22.0",
     "frames.js": "^0.19.0",
     "next": "^14.1.0",
